--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "npx mocha trabalho/trabalho-final.js"
+    "unit-test": "npx mocha trabalho/trabalho-final.js"
   },
   "keywords": [],
   "author": "",
